tried to fix: project section alignment

--- a/style.css
+++ b/style.css
@@ -295,6 +295,15 @@
      display: flex;
  }
 
+ .projectSection {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+    padding: 0 1rem;
+ }
+
  .herosection-2 .projectSection .project1 {
      position: relative;
      height: auto;
